--- a/shop.html
+++ b/shop.html
@@ -13,8 +13,8 @@
         <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
     <div>
         <ul id="navbar">
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="shop.html">shop</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="shop.html">shop</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -28,46 +28,14 @@
     </div>
     </section>
 
-    <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
+    <section id="page-header">
+        <h2>#stayhome</h2>
         <p>Save more with coupons & up to 70% off!</p>
-        <button>Shop Now</button>
-    </section>
-
-    <section id="feature" class="section-p1">
-        <div class="f-box">
-            <img src="img/features/f1.png" alt="">
-            <h6>Free Shipping</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f2.png" alt="">
-            <h6>Online Order</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f3.png" alt="">
-            <h6>Save Money</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f4.png" alt="">
-            <h6>Promotions</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
-        </div>
-        <div class="f-box">
-            <img src="img/features/f6.png" alt="">
-            <h6>Support</h6>
-        </div>
     </section>
 
     <section id="product1" class="section-p1">
-        <h2>Featured Products</h2>
-        <p>Summer Collection New Morden Design</p>
-        <div class="pro-ctn">
-            <div class="pro">
+      <div class="pro-ctn">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f1.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -81,9 +49,9 @@
                     </div>
                     <h4>$78</h4>
                 </div>
-                <a href="#"><i class="fas fa-add cart"></i></a>
+                <a href="#"><i class="fas fa-add cart" ></i></a>
             </div>
-            <div class="pro">
+            <div class="pro"  onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f2.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -99,7 +67,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro"  onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f3.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -115,7 +83,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f4.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -131,7 +99,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro"  onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f5.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -147,7 +115,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f6.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -163,7 +131,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f7.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -179,7 +147,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/f8.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -195,20 +163,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-        </div>
-    </section>
-
-    <section id="banner" class="section-m1">
-        <h4>Repair Services</h4>
-        <h2>Up to <span>70% Off</span> - All t-Shirts & Accessories</h2>
-        <button class="normal">Explore More</button>
-    </section>
-
-    <section id="product1" class="section-p1">
-        <h2>New Arrivals</h2>
-        <p>Summer Collection New Morden Design</p>
-        <div class="pro-ctn">
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n1.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -224,7 +179,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n2.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -240,7 +195,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n3.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -256,7 +211,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n4.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -272,7 +227,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n5.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -288,7 +243,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n6.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -304,7 +259,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n7.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -320,7 +275,7 @@
                 </div>
                 <a href="#"><i class="fas fa-add cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='detailProduct.html';">
                 <img src="img/products/n8.jpg" alt="">
                 <div class="dct">
                     <span>adidas</span>
@@ -339,34 +294,10 @@
         </div>
     </section>
 
-    <section id="sm-banner" class="section-p1">
-        <div class="banner-box">
-            <h4>crazy deals</h4>
-            <h2>buy 1 get 1 free</h2>
-            <span>The best classic is on sale at cara</span>
-            <button class="white">Learn More</button> 
-        </div>
-        <div class="banner-box banner-box2">
-            <h4>spring/summer</h4>
-            <h2>upcomming season</h2>
-            <span>The best classic is on sale at cara</span>
-            <button class="white">Collection</button> 
-        </div>
-    </section>
-
-    <section id="banner3" >
-        <div class="banner-box">
-            <h2>SEASONAL SALE</h2>
-            <h3>Winter Collection -50% OFF</h3>
-        </div>
-        <div class="banner-box b2">
-            <h2>NEW FOOTER COLLECTION</h2>
-            <h3>Spring / Summer 2022</h3>
-        </div>
-        <div class="banner-box b3">
-            <h2>T-SHIRTS</h2>
-            <h3>New Trandy Prints</h3>
-        </div>
+    <section id="pagination" class="section-p1">
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#"><i class="fas fa-long-arrow-alt-right"></i></a>
     </section>
 
     <section id="newslatter" class="section-p1 section-m1">
